--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,10 @@
 {{ partial "header.html" . }}
 
-<div class="swallow">
 {{ $data := .Site.Data }}
+
+<div class="swallow">
+
+<div class="post-swallow">
 {{ range first 10 .Data.Pages }}
 <div class="post-box">
 	<a href="{{ .RelPermalink }}">{{ .Title }}</a>
@@ -9,11 +12,15 @@
 	<div class="post-author">
 	by
 	{{ range .Params.yazar }}
-	<a href="{{ "/yazar/" | relLangURL}}{{ . | urlize }}">{{ $author := index $data.authors . }}{{ $author.name }}</a>
+		<a href="{{ "/yazar/" | relLangURL}}{{ . | urlize }}">
+		{{ $author := index $data.authors . }}{{ $author.name }}
+		</a>
 	{{ end }}
 	</div>
 
 	<div class="post-summary">{{ .Summary }}</div>
 </div>
 {{ end }}
+</div>
+
 </div>
